@@ -75,6 +75,8 @@ PIG-1696: Performance: Use System.arraycopy() instead of manually copying the by
 
 BUG FIXES
 
+PIG-1801: Need better error message for Jython errors (rding)
+
 PIG-1742: org.apache.pig.newplan.optimizer.Rule.java does not work
   with plan patterns where leaves/sinks are not siblings (thejas)
 
